// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButton Checked 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gyUflj irwfst sc-gkdBiK XzJgE"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 eBjExH"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-sc-g1f6ld-5 chIzBU"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gZVniw StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 enovQq"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fjJOKt"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gyUflj cGeIxV sc-gkdBiK XzJgE"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 eBjExH"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-sc-g1f6ld-5 chIzBU"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 enovQq"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gyUflj cGeIxV sc-gkdBiK XzJgE"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 buxzcS"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kqpbkf StyledRadioButton-sc-g1f6ld-5 chIzBU"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpejXz"
            disabled=""
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 gioviw StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 enovQq"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;
